--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </ul>
       <div class="nav-footer">
         <p class="card-title light-primary"> Michael Breiter </p>
-        <p class="orange py-1 pl-1">ADMIN</p>
+        <p class="orange py-1 pl-1 my-1 tag">ADMIN</p>
         <div class="d-flex align-items-center">
           <img src="images/logout.svg" alt="logout" width="20" height="20" class="mr-2" />
           <span class="light-secondary">Logout</span>
@@ -79,7 +79,7 @@
           <h1 class="font-800">Dashboard</h1>
         </div>
         <div class="cards-container">
-          <div class="p-3">
+          <div class="p-3 card">
             <div class="card-title font-600">Cards Total / Activated</div>
             <div class="card-counts light-primary font-500">1'325 / 143</div>
             <div class="card-variation d-flex">
@@ -87,7 +87,7 @@
               <img src="images/arrow_up.svg" alt="Arrow Up">
             </div>
           </div>
-          <div class="p-3">
+          <div class="p-3 card">
             <div class="card-title font-600">Revenue Initial Cards</div>
             <div class="card-counts light-primary font-500">CHF 13'250</div>
             <div class="card-variation d-flex">
@@ -95,7 +95,7 @@
               <img src="images/arrow_up.svg" alt="Arrow Up">
             </div>
           </div>
-          <div class="p-3">
+          <div class="p-3 card">
             <div class="card-title font-600">Revenue Activations</div>
             <div class="card-counts light-primary font-500">CHF 7'007</div>
             <div class="card-variation d-flex">
@@ -103,7 +103,7 @@
               <img src="images/arrow_up.svg" alt="Arrow Up">
             </div>
           </div>
-          <div class="p-3">
+          <div class="p-3 card">
             <div class="card-title font-600">Billing Positions</div>
             <div class="card-counts light-primary font-500">6'945</div>
             <div class="card-variation d-flex">
@@ -112,8 +112,8 @@
             </div>
           </div>
         </div>
-        <div class="cards-container">
-          <div class="p-3">
+        <div class="cards-container mt-2">
+          <div class="p-3 card">
             <div class="card-head d-flex justify-space-between">
               <div class="card-title font-600">Overview Performance</div>
               <select>
@@ -124,7 +124,7 @@
               <canvas id="chart"></canvas>
             </div>
           </div>
-          <div class="p-3">
+          <div class="p-3 card">
             <div class="card-head d-flex justify-space-between">
               <div class="card-title font-600">Top Partners</div>
               <select>
@@ -133,7 +133,7 @@
             </div>
             <div class="card-body pt-3">
               <div class="d-flex justify-space-between">
-                <div>
+                <div class="right-border pr-6">
                   <div class="card-counts light-primary font-500">465</div>
                   <div class="card-variation d-flex">
                     <p class="light-secondary">+2% Activations</p>
@@ -141,7 +141,7 @@
                   </div>
                   <div class="font-size-1 font-600 mt-4">Omnia Physio</div>
                 </div>
-                <div>
+                <div class="right-border pr-6">
                   <div class="card-counts light-primary font-500">245</div>
                   <div class="card-variation d-flex">
                     <p class="light-secondary">+2% Activations</p>
@@ -161,8 +161,8 @@
             </div>
           </div>
         </div>
-        <div class="cards-container">
-          <div class="p-3">
+        <div class="cards-container mt-2">
+          <div class="p-3 card">
             <div class="card-head d-flex justify-space-between">
               <div class="card-title font-600" id="open-invoices">Open Invoices</div>
               <select>
@@ -242,8 +242,8 @@
             </div>
           </div>
         </div>
-        <div class="cards-container">
-          <div class="p-3">
+        <div class="cards-container mt-2">
+          <div class="p-3 card">
             <div class="card-head d-flex justify-space-between">
               <div class="card-title font-600" id="latest-activations">Latest Activations</div>
               <select>
@@ -268,7 +268,7 @@
                   <tr>
                     <td>TCM Jaine</td>
                     <td>
-                      <div class="orange">One</div>
+                      <div class="tag">One</div>
                     </td>
                     <td>643OsldfjlaAsflas</td>
                     <td>18.01.2023</td>
@@ -284,7 +284,7 @@
                   <tr>
                     <td>TCM Jaine</td>
                     <td>
-                      <div class="orange">One</div>
+                      <div class="tag">One</div>
                     </td>
                     <td>643OsldfjlaAsflas</td>
                     <td>18.01.2023</td>
@@ -300,7 +300,7 @@
                   <tr>
                     <td>TCM Jaine</td>
                     <td>
-                      <div class="orange">One</div>
+                      <div class="tag">One</div>
                     </td>
                     <td>643OsldfjlaAsflas</td>
                     <td>18.01.2023</td>
@@ -317,7 +317,7 @@
                   <tr>
                     <td>TCM Jaine</td>
                     <td>
-                      <div class="orange">One</div>
+                      <div class="tag">One</div>
                     </td>
                     <td>643OsldfjlaAsflas</td>
                     <td>18.01.2023</td>
